analytics script added

--- a/index.html
+++ b/index.html
@@ -325,6 +325,16 @@
                 makeTimer();
             }, 1000);
         });
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153868397-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153868397-1');
+</script>
+
     </script>
 </body>
 
