--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <li class="l-section section">
                             <div class="about">
                                 <div class="about--banner">
-                                    <h2>Family is not an important thing,<br> it’s everything</h2>
+                                    <h2>Family is not just an important thing,<br>but it’s EVERYTHING</h2>
 
                                     <img src="assets/img/about-visual.png" alt="About Us">
                                 </div>
